VVを増やした

--- a/compose.yml
+++ b/compose.yml
@@ -1,36 +1,135 @@
 services:
   frontend:
-    container_name: progate-frontend
+    container_name: progate-frontend-dev-test
     build:
       context: .
       dockerfile: ./frontend/Dockerfile
     ports:
-      - "3000:3000"
+      - "3001:3000"
     volumes:
       - ./frontend:/app/frontend
     command: /bin/sh -c 'npm install && npm run dev'
     environment:
       - WATCHPACK_POLLING=true
     tty: true
+    # networks:
+    #   - voice_box
+
 
   backend:
-    container_name: progate-backend
+    container_name: progate-backend-dev-test
     build:
       context: ./backend
       dockerfile: Dockerfile
     ports:
-      - "8080:8080"
+      - "8081:8080"
     volumes:
       - ./backend:/usr/src/app
     tty: true
     environment:
       - backend:${DATABASE_URL}
+    # networks:
+    #   - voice_box
 
-  voicevox:
-    container_name: progate_voicevox
+
+  voicevox0:
+    container_name: progate_voicevox-dev-test0
     build:
       context: .
       dockerfile: ./voicevox/Dockerfile
     ports:
-      - "50021:50021"
+      - "50020:50021"
     tty: true
+    # networks:
+    #   - voice_box
+    deploy:
+      resources:
+        limits:
+          cpus: "2"
+          memory: 2048M
+
+  voicevox1:
+    container_name: progate_voicevox-dev-test1
+    build:
+      context: .
+      dockerfile: ./voicevox/Dockerfile
+    ports:
+      - "50022:50021"
+    tty: true
+    deploy:
+      resources:
+        limits:
+          cpus: "2"
+          memory: 2048M
+
+  voicevox2:
+    container_name: progate_voicevox-dev-test2
+    build:
+      context: .
+      dockerfile: ./voicevox/Dockerfile
+    ports:
+      - "50023:50021"
+    tty: true
+    deploy:
+      resources:
+        limits:
+          cpus: "2"
+          memory: 2048M
+
+  voicevox3:
+    container_name: progate_voicevox-dev-test3
+    build:
+      context: .
+      dockerfile: ./voicevox/Dockerfile
+    ports:
+      - "50024:50021"
+    tty: true
+    deploy:
+      resources:
+        limits:
+          cpus: "1.1"
+          memory: 1024M
+
+  voicevox4:
+    container_name: progate_voicevox-dev-test4
+    build:
+      context: .
+      dockerfile: ./voicevox/Dockerfile
+    ports:
+      - "50025:50021"
+    tty: true
+    deploy:
+      resources:
+        limits:
+          cpus: "1.1"
+          memory: 1024M
+
+  voicevox5:
+    container_name: progate_voicevox-dev-test5
+    build:
+      context: .
+      dockerfile: ./voicevox/Dockerfile
+    ports:
+      - "50026:50021"
+    tty: true
+    deploy:
+      resources:
+        limits:
+          cpus: "1.1"
+          memory: 1024M
+          
+  # voicevox5:
+  #   container_name: progate_voicevox-dev-test5
+  #   build:
+  #     context: .
+  #     dockerfile: ./voicevox/Dockerfile
+  #   ports:
+  #     - "50026:50021"
+  #   tty: true
+
+
+# networks:
+#   voice_box:
+#     driver: bridge
+
+
